--- a/notebooks/chat-completion.ipynb
+++ b/notebooks/chat-completion.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 1,
    "id": "7243164c9f0575f",
    "metadata": {},
    "outputs": [],
@@ -10,12 +10,13 @@
     "import textwrap\n",
     "from time import perf_counter\n",
     "\n",
-    "from llama_cpp import Llama"
+    "from llama_cpp import Llama\n",
+    "from lm_eval_lab.utils.load_prompts import load_system_prompt"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 2,
    "id": "f2287e69",
    "metadata": {},
    "outputs": [],
@@ -25,7 +26,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 3,
+   "id": "95d65484",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "system_prompt = load_system_prompt(\"../.lab-prompts/system.toml\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "de148610",
    "metadata": {},
    "outputs": [],
@@ -41,7 +52,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 5,
+   "id": "e539dfcc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "user_prompt = \"Who won the world series in 2020\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "id": "171eada5",
    "metadata": {},
    "outputs": [],
@@ -49,10 +70,10 @@
     "t0 = perf_counter()\n",
     "response = llm.create_chat_completion(\n",
     "    messages = [\n",
-    "          {\"role\": \"system\", \"content\": \"You are a helpful assistant.\"},\n",
+    "          {\"role\": \"system\", \"content\": system_prompt},\n",
     "          {\n",
     "              \"role\": \"user\",\n",
-    "              \"content\": \"Who won the world series in 2020\"\n",
+    "              \"content\": user_prompt\n",
     "          }\n",
     "      ],\n",
     "    temperature=0.7\n",
