--- a/website/docs/intro.mdx
+++ b/website/docs/intro.mdx
@@ -20,7 +20,7 @@ title: Intro
 # Eval Lab
 
 :::note
-this project is under active development, and is not intended to be used as an open source service.
+this project is under active development
 :::
 
 ## The basics
