--- a/notebooks/chat-completion.ipynb
+++ b/notebooks/chat-completion.ipynb
@@ -11,7 +11,7 @@
     "from time import perf_counter\n",
     "\n",
     "from llama_cpp import Llama\n",
-    "from lm_eval_lab.utils.load_prompts import load_system_prompt"
+    "from lm_eval_lab.utils import load_system_prompt"
    ]
   },
   {
